@@ -1,5 +1,6 @@
 28.04.2020
 [*] install fixed and decorated
+[*] moved queries from index.php to model
 
 27.04.2020
 [*] deprecated class contructor call fixed
